--- a/QuanLyKhachSan/Properties/Resources.resx
+++ b/QuanLyKhachSan/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="group-profile-users_icon-icons.com_73540" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\group-profile-users_icon-icons.com_73540.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="televisionshelf_117768" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\televisionshelf_117768.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -135,9 +138,6 @@
   </data>
   <data name="PhongBaoTri" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PhongBaoTri.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-hotel-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-hotel-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="homemono_105947 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\homemono_105947 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,11 +157,14 @@
   <data name="phone-call-auricular-symbol-in-black_icon-icons.com_56483 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\phone-call-auricular-symbol-in-black_icon-icons.com_56483 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="3709753-call-customer-relation-service-support_108076" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3709753-call-customer-relation-service-support_108076.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PhongDaDat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PhongDaDat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="group-profile-users_icon-icons.com_73540" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\group-profile-users_icon-icons.com_73540.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-hotel-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-hotel-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="PhongDaCoKhach" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PhongDaCoKhach.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,7 +202,7 @@
   <data name="meeting-room_116766" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\meeting-room_116766.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="3709753-call-customer-relation-service-support_108076" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3709753-call-customer-relation-service-support_108076.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="room_icon_144154" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\room_icon_144154.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
